--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+  <meta name="viewport" content="...">
   <meta charset="utf-8">
   <title>Dino icons</title>
   <link rel="stylesheet" href="/css/master.css">
@@ -8,8 +9,25 @@
 <body>
   <ul>
     <li>
-    <i class="icons">
+    <a href="#">
+    <i class="icon">
+      <svg><use xlink:href="images/dino-icons.svg#brachiosaurus"></use></svg>
     </i>
+    <span>Brachiosaurus</span>
+    </li>
+    <li>
+    <a href="#">
+    <i class="icon">
+      <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus"></use></svg>
+    </i>
+    <span>Micropachycephalosaurus</span>
+    </li>
+    <li>
+    <a href="#">
+    <i class="icon">
+      <svg><use xlink:href="images/dino-icons.svg#velociraptor"></use></svg>
+    </i>
+    <span>Velociraptor</span>
     </li>
   </ul>
 
