--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Dino icons</title>
   <meta name="viewport" content="...">
-  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <ul>
